--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"displayName": "HOL4 mode",
 	"description": "A VSCode extension for interacting with the HOL4 theorem prover",
 	"version": "0.0.1",
+	"repository": "https://github.com/oskarabrahamsson/hol4-vscode",
 	"engines": {
 		"vscode": "^1.63.0"
 	},
