--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "hol4-mode",
 	"displayName": "HOL4 mode",
 	"description": "A VSCode extension for interacting with the HOL4 theorem prover",
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"repository": "https://github.com/oskarabrahamsson/hol4-vscode",
 	"engines": {
 		"vscode": "^1.75.0"
@@ -49,7 +49,7 @@
 			},
 			{
 				"command": "hol4-mode.interrupt",
-				"title": "HOL: Interrupt session"
+				"title": "HOL: Interrupt HOL process"
 			},
 			{
 				"command": "hol4-mode.sendSelection",
@@ -85,23 +85,15 @@
 			},
 			{
 				"command": "hol4-mode.proofmanRestart",
-				"title": "HOL: Restart proof"
+				"title": "HOL: Restart current goal"
 			},
 			{
 				"command": "hol4-mode.proofmanDrop",
-				"title": "HOL: Drop proof"
+				"title": "HOL: Drop current goal"
 			},
 			{
 				"command": "hol4-mode.proofmanBack",
-				"title": "HOL: Step backwards in proof"
-			},
-			{
-				"command": "hol4-mode.showTypesTrue",
-				"title": "HOL: Show types"
-			},
-			{
-				"command": "hol4-mode.showTypesFalse",
-				"title": "HOL: Don't show types"
+				"title": "HOL: Step backwards in current goal"
 			},
 			{
 				"command": "hol4-mode.indexWorkspace",
@@ -113,14 +105,22 @@
 			},
 			{
 				"command": "hol4-mode.holmake",
-				"title": "HOL: Run Holmake in directory of the current document"
+				"title": "HOL: Run Holmake in the directory of the current document"
+			},
+			{
+				"command": "hol4-mode.toggleShowAssums",
+				"title": "HOL: Toggle printing of theorem hypotheses"
+			},
+			{
+				"command": "hol4-mode.toggleShowTypes",
+				"title": "HOL: Toggle printing of term types"
 			}
 		],
 		"keybindings": [
 			{
 				"command": "hol4-mode.startSession",
-				"key": "ctrl+h ctrl+h",
-				"mac": "cmd+h cmd+h",
+				"key": "ctrl+h h",
+				"mac": "cmd+h h",
 				"when": "editorLangId == hol4"
 			},
 			{
@@ -131,8 +131,8 @@
 			},
 			{
 				"command": "hol4-mode.interrupt",
-				"key": "ctrl+h ctrl+i",
-				"mac": "cmd+h cmd+i",
+				"key": "ctrl+h ctrl+c",
+				"mac": "cmd+h cmd+c",
 				"when": "editorLangId == hol4"
 			},
 			{
@@ -143,8 +143,8 @@
 			},
 			{
 				"command": "hol4-mode.sendUntilCursor",
-				"key": "ctrl+h ctrl+s",
-				"mac": "cmd+h cmd+s",
+				"key": "ctrl+h ctrl+shift+s",
+				"mac": "cmd+h cmd+shift+s",
 				"when": "editorLangId == hol4"
 			},
 			{
@@ -155,8 +155,8 @@
 			},
 			{
 				"command": "hol4-mode.sendSubgoal",
-				"key": "ctrl+h shift+s",
-				"mac": "cmd+h shift+s",
+				"key": "ctrl+h ctrl+s",
+				"mac": "cmd+h ctrl+s",
 				"when": "editorLangId == hol4"
 			},
 			{
@@ -185,20 +185,32 @@
 			},
 			{
 				"command": "hol4-mode.proofmanRestart",
-				"key": "ctrl+h r",
-				"mac": "cmd+h r",
+				"key": "ctrl+h shift+r",
+				"mac": "cmd+h shift+r",
 				"when": "editorLangId == hol4"
 			},
 			{
 				"command": "hol4-mode.proofmanRotate",
-				"key": "ctrl+h shift+r",
-				"mac": "cmd+h shift+r",
+				"key": "ctrl+h r",
+				"mac": "cmd+h r",
 				"when": "editorLangId == hol4"
 			},
 			{
 				"command": "hol4-mode.proofmanDrop",
 				"key": "ctrl+h d",
 				"mac": "cmd+h d",
+				"when": "editorLangId == hol4"
+			},
+			{
+				"command": "hol4-mode.toggleShowTypes",
+				"key": "ctrl+h ctrl+t",
+				"mac": "cmd+h cmd+t",
+				"when": "editorLangId == hol4"
+			},
+			{
+				"command": "hol4-mode.toggleShowAssums",
+				"key": "ctrl+h ctrl+a",
+				"mac": "cmd+h cmd+a",
 				"when": "editorLangId == hol4"
 			}
 		],
