--- a/package.json
+++ b/package.json
@@ -100,8 +100,8 @@
 				"title": "HOL: Index workspace for IDE"
 			},
 			{
-				"command": "hol4-mode.reindexAllDependencies",
-				"title": "HOL: Reindex all dependencies"
+				"command": "hol4-mode.refreshIndex",
+				"title": "HOL: Refresh symbol index"
 			},
 			{
 				"command": "hol4-mode.holmake",
@@ -217,10 +217,10 @@
 		"configuration": {
 			"title": "HOL4",
 			"properties": {
-				"hol4-mode.experimental": {
+				"hol4-mode.indexing": {
 					"type": "boolean",
-					"default": false,
-					"description": "Enable experimental IDE features for HOL4"
+					"default": "true",
+					"description": "Enable indexing of symbols"
 				}
 			}
 		}
